test/sema/nonmutating-member-function.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

struct Foo {
    int i;

    void bar() {
        // CHECK: [[@LINE+1]]:26: error: cannot initialize variable of type 'mutable Foo*' with 'Foo*'
        mutable Foo* f = this;
    }
}
